contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/ownable/fail/non_struct_input.rs
// UI (trybuild) negative test: `#[ownable]` must be applied to a struct.

#[common_macros::ownable]
pub enum NotAStruct {
    A,
}

fn main() {}
